add more features

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YourCompany</title>
+  <title>Aizatkamarudin.</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -33,11 +33,12 @@
 <div class="max-w-6xl mx-auto px-6 py-12">
 
 <header class="mb-16 flex flex-col md:flex-row md:justify-between md:items-center gap-6">
-  <div class="text-lg tracking-wide">YourCompany</div>
+  <div class="text-lg tracking-wide">Aizatkamarudin.</div>
 
   <nav class="flex gap-6 text-sm text-muted">
     <a href="index.html" class="hover:text-text">Home</a>
     <a href="services.html" class="hover:text-text">Services</a>
+    <a href="works.html" class="hover:text-text">Works</a>
     <a href="about.html" class="hover:text-text">About</a>
     <a href="contact.html" class="hover:text-text">Contact</a>
   </nav>
@@ -47,24 +48,42 @@
 
 <section>
   <h1 class="text-3xl tracking-wide max-w-3xl mb-6">
-    Reliable systems for modern infrastructure
+    Turning complex processes into simple digital systems
   </h1>
   <p class="text-muted max-w-xl leading-relaxed">
-    We design, deploy, and maintain IT and networking systems
-    with clarity, stability, and long-term reliability.
+    I help organizations solve operational challenges
+    through custom web and mobile applications,
+    backed by thoughtful consulting and solid architecture.
   </p>
 </section>
 
-<section class="border-t border-border pt-8">
-  <a href="services.html" class="text-sm tracking-wide hover:text-text">
+<section class="border-t border-border pt-8 flex flex-col gap-3">
+  <a
+    href="services.html"
+    class="text-sm tracking-wide text-muted hover:text-text"
+  >
     View services →
   </a>
+  <a
+    href="works.html"
+    class="text-sm tracking-wide text-muted hover:text-text"
+  >
+    View works →
+  </a>
+  <a
+    href="contact.html"
+    class="text-sm tracking-wide text-muted hover:text-text"
+  >
+    Start a project →
+  </a>
 </section>
+
+
 
 </main>
 
 <footer class="mt-40 pt-6 border-t border-border text-faint text-sm">
-  © 2026 YourCompany. All rights reserved.
+  © 2026 Aizatkamarudin. All rights reserved.
 </footer>
 
 </div>
