--- a/public/services.html
+++ b/public/services.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YourCompany</title>
+  <title>Aizatkamarudin.</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -44,28 +44,52 @@
 
 <div class="space-y-2">
 
-<a href="service-detail.html" class="block border-t border-border py-6 hover:bg-surface transition">
-  <div class="flex justify-between">
-    <span>01 &nbsp; Network Infrastructure</span>
-    <span class="text-muted">View →</span>
-  </div>
-</a>
+  <a href="services/digital-consulting.html" class="block border-t border-border py-6 hover:bg-surface transition">
+    <div class="flex justify-between">
+      <span>01 &nbsp; Digital Consulting</span>
+      <span class="text-muted">View →</span>
+    </div>
+    <p class="text-sm text-muted mt-2 max-w-xl">
+      Helping organizations analyze problems, design solutions,
+      and digitalize manual processes with clarity and purpose.
+    </p>
+  </a>
 
-<a href="service-detail.html" class="block border-t border-border py-6 hover:bg-surface transition">
-  <div class="flex justify-between">
-    <span>02 &nbsp; Managed Wi-Fi</span>
-    <span class="text-muted">View →</span>
-  </div>
-</a>
+  <a href="services/web-application.html" class="block border-t border-border py-6 hover:bg-surface transition">
+    <div class="flex justify-between">
+      <span>02 &nbsp; Web Application Development</span>
+      <span class="text-muted">View →</span>
+    </div>
+    <p class="text-sm text-muted mt-2 max-w-xl">
+      Custom web applications with solid backend architecture,
+      clean frontend interfaces, and scalable APIs.
+    </p>
+  </a>
 
-<a href="service-detail.html" class="block border-t border-border py-6 hover:bg-surface transition">
-  <div class="flex justify-between">
-    <span>03 &nbsp; System Integration</span>
-    <span class="text-muted">View →</span>
-  </div>
-</a>
+  <a href="services/mobile-application.html" class="block border-t border-border py-6 hover:bg-surface transition">
+    <div class="flex justify-between">
+      <span>03 &nbsp; Mobile Solutions</span>
+      <span class="text-muted">View →</span>
+    </div>
+    <p class="text-sm text-muted mt-2 max-w-xl">
+      Cross-platform mobile apps designed for performance,
+      usability, and real-world operational needs.
+    </p>
+  </a>
+
+  <a href="services/iot-integration.html" class="block border-t border-border py-6 hover:bg-surface transition">
+    <div class="flex justify-between">
+      <span>04 &nbsp; IoT & System Integration</span>
+      <span class="text-muted">View →</span>
+    </div>
+    <p class="text-sm text-muted mt-2 max-w-xl">
+      Integrating devices, sensors, and systems into reliable
+      platforms that deliver data, automation, and control.
+    </p>
+  </a>
 
 </div>
+
 
 </main>
 </div>
