--- a/public/pricing.html
+++ b/public/pricing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aizatkamarudin.</title>
+  <title>YourCompany</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -28,49 +28,51 @@
   </script>
 </head>
 
-<body class="bg-bg text-text font-sans opacity-0 animate-fadeIn">
+
+<body class="bg-bg text-text">
 <div class="max-w-6xl mx-auto px-6 py-12">
 
 <header class="mb-20">
-  <a href="index.html" class="text-muted text-sm">← Back</a>
+  <a href="index.html" class="text-muted text-sm">← Home</a>
 </header>
 
 <main class="space-y-16">
 
-<section>
-  <h1 class="text-2xl tracking-wide mb-6">About</h1>
-  <p class="text-muted leading-relaxed">
-    I design and build digital systems that solve practical
-    problems. My work spans backend services, web and mobile
-    applications, and operational platforms, with a strong
-    focus on clarity, reliability, and long-term maintainability.
-  </p>
+<h1 class="text-2xl tracking-wide">Service Overview</h1>
 
-  <p class="text-muted leading-relaxed mt-4">
-    Rather than chasing trends, I prioritize understanding
-    real-world workflows and turning them into systems that
-    teams can rely on day after day.
-  </p>
-</section>
+<div class="space-y-8 text-sm">
 
-<section class="space-y-6 text-sm text-muted">
-  <div>
-    <div class="text-faint">Background</div>
-    <div>Software & Systems Engineering</div>
-  </div>
-  <div>
-    <div class="text-faint">Experience</div>
-    <div>Web, Mobile, Backend & System Integration</div>
-  </div>
-  <div>
-    <div class="text-faint">Focus</div>
-    <div>Problem-solving, Digitalization, Scalable Systems</div>
-  </div>
-</section>
+<div class="border-t border-border pt-6 flex justify-between">
+  <span>Network Infrastructure Design</span>
+  <span class="text-muted">Project-based</span>
+</div>
+
+<div class="border-t border-border pt-6 flex justify-between">
+  <span>Managed Wi-Fi</span>
+  <span class="text-muted">Monthly</span>
+</div>
+
+<div class="border-t border-border pt-6 flex justify-between">
+  <span>System Integration</span>
+  <span class="text-muted">Scope-based</span>
+</div>
+
+<div class="border-t border-border pt-6 flex justify-between">
+  <span>Maintenance & Support</span>
+  <span class="text-muted">SLA-based</span>
+</div>
+
+</div>
+
+<p class="text-muted text-sm max-w-xl">
+Pricing varies depending on scope and requirements.
+Please contact us for a formal quotation.
+</p>
 
 </main>
 </div>
 </body>
+
 
 </html>
 <script>
