--- a/public/project-detail.html
+++ b/public/project-detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aizatkamarudin.</title>
+  <title>YourCompany</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -29,34 +29,32 @@
 </head>
 
 
-<body class="bg-bg text-text font-sans opacity-0 animate-fadeIn">
-<div class="max-w-6xl mx-auto px-6 py-12">
-<header class="mb-20">
-  <a href="index.html" class="text-muted text-sm">← Back</a>
+<body class="bg-bg text-text">
+<div class="max-w-4xl mx-auto px-6 py-12">
+
+<header class="mb-16">
+  <a href="projects.html" class="text-muted text-sm">← Projects</a>
 </header>
 
-<main class="space-y-16">
+<main class="space-y-12">
 
-<h1 class="text-2xl tracking-wide">Contact</h1>
+<h1 class="text-2xl tracking-wide">Enterprise Network Upgrade</h1>
 
-<div class="space-y-6 text-muted">
-  <div>
-    <div class="text-faint">Email</div>
-    <div>hello@aizatkamarudin.com</div>
-  </div>
-  <div>
-    <div class="text-faint">Phone</div>
-    <div>+60 19-269 6591</div>
-  </div>
-  <div>
-    <div class="text-faint">Office</div>
-    <div>Kuala Lumpur, Malaysia</div>
-  </div>
+<p class="text-muted leading-relaxed">
+This project involved redesigning the internal network infrastructure
+to improve redundancy, security, and long-term scalability.
+</p>
+
+<div class="border-t border-border pt-6 space-y-4 text-sm text-muted">
+  <div><span class="text-faint">Industry:</span> Corporate</div>
+  <div><span class="text-faint">Scope:</span> LAN, Firewall, Monitoring</div>
+  <div><span class="text-faint">Outcome:</span> Improved uptime and security posture</div>
 </div>
 
 </main>
 </div>
 </body>
+
 
 </html>
 <script>
